styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "roboto", sans-serif;
}
section {
  background-color: rgb(425, 425, 425);
  transition: all 300ms ease;
}
li {
  list-style-type: none;
}
.orange {
  color: #f06449 !important;
}
a {
  text-decoration: none;
}
p {
  line-height: 1.5;
  font-size: 16px;
}
button {
  cursor: pointer;
}

.container {
  padding: 50px 0;
  width: 100%;
}
.row {
  width: 100%;
  max-width: 1100px;
  margin: 0 auto;
  padding: 0 12px;
}

.click {
  cursor: pointer;
  transition: all 300ms ease;
}
.click:hover {
  transform: scale(1.1);
}
.click:active {
  transform: scale(0.8);
}
.link__hover-effect {
  position: relative;
}

.link__hover-effect:after {
  content: "";
  position: absolute;
  bottom: -3px;
  height: 3px;
  width: 0;
  right: 0;
  background-color: black;
  transition: all 300ms ease;
}
.link__hover-effect--white::after {
  background-color: #fff;
}
.link__hover-effect--black:after {
  background-color: #242424;
}

.link__hover-effect:hover:after {
  left: 0;
  width: 100%;
}
input,
textarea {
  width: 100%;
  background-color: #242424;
  color: white;
  outline: none;
  border: 3px solid #c0c4cc;
  border-top: none;
  border-left: none;
  border-right: none;
  height: 40px;
  transition: all 300ms ease;
}
textarea {
  resize: vertical;
  height: 100px;
  padding: 15px 0;
  margin-top: 8px;
}
input:hover,
textarea:hover {
  border-color: #dcdfe6;
}
input:focus,
textarea:focus {
  border-color: #f06449;
}

label {
  font-size: 14px;
  font-weight: bold;
  margin-bottom: 6px;
}
.title {
  font-size: 80px;
  margin-bottom: 12px;
  text-align: left;
  line-height: 1;
}
nav,
.scroll,
.header {
  opacity: 1;
  visibility: visible;
  transition: all 600ms 800ms;
}
.modal--open nav,
.modal--open .scroll,
.modal--open .header {
  opacity: 0;
  visibility: hidden;
  transition: all 400ms;
}

.dark-theme .title,
.dark-theme .section__title,
.dark-theme .section__sub-title,
.dark-theme .nav__link--anchor,
.dark-theme .fa-circle-half-stroke,
.dark-theme .header__para {
  color: white;
}
.dark-theme section {
  background-color: #242424;
}
.dark-theme #personal-logo {
  filter: none;
}
.dark-theme .scroll__icon {
  border-color: white;
}
.dark-theme .scroll__icon::after,
.dark-theme .link__hover-effect--black:after {
  background-color: white;
}

.dark-theme .mail__btn {
  background-color: white;
  color: #242424;
}

/*

Landing Page


*/

#landing-page {
  min-height: 100vh;
}
.header {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  max-width: 1000px;
  padding: 0 30px;
}

.header__para {
  font-size: 24px;
  line-height: 2;
  max-width: 450px;
}
.social__list {
  margin-top: 16px;
  display: flex;
}
.social__link {
  background-color: #f06449;
  color: white;
  padding: 6px;
  width: 32px;
  height: 32px;
  font-size: 14px;
  margin-right: 12px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
}
.mail__btn {
  width: 70px;
  height: 70px;
  font-size: 32px;
  border-radius: 50%;
  border: none;
  background-color: #242424;
  color: white;
  position: absolute;
  bottom: 32px;
  right: 40px;
}
.scroll {
  position: absolute;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
}

.scroll__icon {
  width: 20px;
  height: 30px;
  border: 2px solid #242424;
  border-radius: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.scroll__icon::after {
  content: "";
  width: 4px;
  height: 6px;
  background-color: #242424;
  border-radius: 2px;
  animation: scroll 1000ms infinite alternate-reverse;
}
@keyframes scroll {
  0% {
    transform: translateY(3px);
  }
  100% {
    transform: translateY(-3px);
  }
}

/*

Navigation

*/

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  height: 100px;
  padding: 0 20px;
}
#personal-logo {
  height: 50px;
  width: 50px;
  filter: invert(1);
}
.nav__link--list {
  display: flex;
  list-style: none;
}

.nav__link {
  margin: 0 12px;
}
.nav__link--anchor {
  font-size: 16px;
  color: #242424;
  font-weight: 700;
}
.fa-circle-half-stroke {
  font-size: 20px;
}
/*

Modal

*/
.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  max-width: 1000px;
  height: 700px;
  visibility: hidden;
  border-radius: 20px;

  overflow: hidden;
  display: flex;
  visibility: hidden;
  z-index: -1;
  transition:
    visibility 1s,
    z-index 1s,
    box-shadow 0.5s ease;
}
.modal--open .modal {
  z-index: 60;
  box-shadow: 0 30px 80px 0 rgb(0, 0, 0, 0.55);
  visibility: visible;
}
.modal__half {
  width: 50%;
  padding: 40px 72px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
  transition: all 300ms ease-in;
}
.modal--open .modal__about,
.modal--open .modal__contact {
  transform: translateX(0%);
}
.modal__about {
  background-color: rgb(245, 245, 245);
  transform: translateX(-110%);
}
.modal__contact {
  background-color: #242424;
  color: white;
  transform: translateX(110%);
}
.modal__languages {
  display: flex;
  flex-wrap: wrap;
}
.modal__language {
  width: 25%;
  padding: 16px;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  transition: all 300ms ease;
}
.modal__language:hover .language__name {
  transform: scale(1);
}
.modal__language:hover {
  filter: brightness(80%);
  transform: scale(0.9);
}
.language__name {
  position: absolute;
  bottom: -10px;
  transform: scale(0);
  transition: all 300ms ease;
}
.modal__language--img {
  width: 100%;
}
.modal__title {
  font-size: 26px;
}
.modal__sub-title {
  margin: 16px 0 24px 0;
  font-size: 14px;
}
.modal__para {
  font-size: 18px;
  margin-bottom: 12px;
  line-height: 1.75;
}
.form__item {
  margin-bottom: 20px;
}

.form__submit {
  background-color: #f06449;
  border: 2ps solid #f06449;
  color: #fff;
  font-weight: 700;
  width: 100%;
  max-width: 200px;
  padding: 12px 28px;
  font-size: 20px;
  transition: all 300ms ease;
  display: flex;
  align-items: center;
  justify-content: center;
}

.form__submit:hover {
  border-color: #fff;
  background-color: transparent;
  transition: all 300ms ease;
}

.form__submit:active {
  border-color: #f06449;
  color: #f06449;
}
.modal__overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
  align-items: center;
  justify-content: center;
  z-index: -1;
}
.modal__overlay--loading {
  background-color: #242424;
  font-size: 80px;
  z-index: -1;
}
.modal__overlay--success {
  background-color: #4bb543;
  font-size: 36px;
  font-weight: 700;
  text-align: center;
  padding: 28px;
}
.modal__overlay--visible {
  z-index: 1;
  display: flex;
}
.fa-spinner {
  animation: spinner 750ms infinite linear;
}
@keyframes spinner {
  0% {
    transform: rotate(0);
  }

  100% {
    transform: rotate(360deg);
  }
}
.modal__exit {
  position: absolute;
  top: 30px;
  right: 40px;
  color: #fff;
  font-size: 36px;
  z-index: 100;
}

/*

Projects

*/
.section__title {
  text-align: center;
  font-size: 48px;
  margin-bottom: 60px;
}

.project__img {
  width: 100%;
  transition: all 600ms ease;
}

.project__wrapper {
  position: relative;
  border-radius: 20px;
  box-shadow: 0 20px 80px rgb(0, 0, 0, 0.45);
  overflow: hidden;
  margin: 96px 0;
}

.project__wrapper:hover .project__description {
  opacity: 1;
  transform: translateY(-50%);
}

.project__wrapper--bg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #1c1d25;
  opacity: 0;
}

.project__wrapper:hover .project__img {
  transform: scale(1.07);
  filter: blur(5px);
}

.project__wrapper:hover .project__wrapper--bg {
  opacity: 0.7;
}
.project__description {
  position: absolute;
  top: 50%;
  left: 90px;
  transform: translateY(100%);
  color: white;
  opacity: 0;
  transition:
    opacity 300ms,
    transform 450ms ease;
  max-width: 550px;
}

.project__description--title {
  font-size: 40px;
}
.project__description--sub-title {
  margin-top: 8px;
}
.project__description--link {
  color: white;
  font-size: 20px;
  margin-right: 16px;
}
.project__description--para {
  margin: 16px 0;
}
/*

footer

*/

footer {
  background-color: #242424;
  display: flex;
  padding: 6% 0;
}
.footer__row {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}
.footer__logo--img {
  width: 70px;
}
.footer__social--list {
  width: 100%;
  max-width: 500px;
  display: flex;

  justify-content: space-around;
  margin: 28px 0;
}
.footer__social--link,
.footer__copyright {
  color: white;
}

/*

Shapes

*/

.shape {
  position: fixed;
}

.shape--0 {
  top: 15vh;
  left: 5vw;
}
.shape--1 {
  top: 15vh;
  left: 50vw;
}
.shape--2 {
  top: 15vh;
  left: 80vw;
}
.shape--3 {
  top: 50vh;
  left: 5vw;
}
.shape--4 {
  top: 50vh;
  left: 50vw;
}
.shape--5 {
  top: 50vh;
  left: 80vw;
}
.shape--6 {
  top: 80vh;
  left: 5vw;
}
.shape--7 {
  top: 80vh;
  left: 50vw;
}
.shape--8 {
  top: 80vh;
  left: 80vw;
}

